v1.0.13 (Home) Correction css (nowrap pour affichage mobile)

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -63,6 +63,10 @@ p {
   line-height: $line-height-lg;
 }
 
+.no-wrap {
+  white-space: nowrap;
+}
+
 // Spacing and heading styling for page sections
 .page-section {
   padding: 4rem 0;
